# NBodyProblem

./: CMakeLists.txt  NBodyProblem.sln  NBodyProblem.vcxproj  NBodyProblem.vcxproj.filters  README.md  build.bat  build.ps1  imgui.ini
include/glad/: glad.h
src/: BarnesHutCalculator.cpp  BarnesHutCalculator.h  Camera.cpp  Camera.h  ForceCalculator.cpp  ForceCalculator.h  GridGenerator.cpp  GridGenerator.h  Integrator.cpp  Integrator.h  MassObject.cpp  MassObject.h  MassObjectTracker.cpp  MassObjectTracker.h  PhysicsEngine.cpp  PhysicsEngine.h  QuadTree.cpp  QuadTree.h  Sphere.cpp  Sphere.h  SphereRenderer.cpp  SphereRenderer.h  example_with_sphere_renderer.cpp  glad.c  main.cpp  massObject.cpp  massObject.h
